Add AddNewCar Activity
Many bug fixes

Code cleaning

Complete Task 1.

--- a/app/src/main/res/layout/activity_fuel_statistics.xml
+++ b/app/src/main/res/layout/activity_fuel_statistics.xml
@@ -1,5 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/refill"
+                app:layout_collapseMode="parallax"/>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"/>
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,16 +50,44 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.android.gaoyun.autoapp.FuelStatisticsActivity">
 
-    <HorizontalScrollView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/hsw_1">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center|center_horizontal"
+            android:id="@+id/textCost100"
+            android:text="Стоимость 100км пробега"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true" />
+
+        <HorizontalScrollView
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginTop="22dp"
+            android:id="@+id/hsw_1">
         <view
             android:layout_width="wrap_content"
             android:layout_height="200dp"
+            android:layout_marginBottom="20dp"
             class="graphics.LineView"
             android:id="@+id/line_view" />
     </HorizontalScrollView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center|center_horizontal"
+            android:id="@+id/textFuelWaste"
+            android:text="Средний расход"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"
+            android:layout_below="@+id/hsw_1"
+            android:layout_alignParentStart="true"
+            android:layout_alignEnd="@+id/hsw_1" />
 
     <HorizontalScrollView
         android:layout_height="wrap_content"
@@ -28,8 +97,11 @@
         <view
             android:layout_width="wrap_content"
             android:layout_height="200dp"
+            android:layout_marginBottom="20dp"
             class="graphics.LineView"
             android:id="@+id/line_view2" />
     </HorizontalScrollView>
 
-</RelativeLayout>
+    </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
