--- a/app/src/main/res/layout/activity_add_fuel.xml
+++ b/app/src/main/res/layout/activity_add_fuel.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+    </android.support.design.widget.AppBarLayout>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -6,7 +19,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="5dp"
+    android:layout_marginTop="0dp"
     tools:context=".AddFuelActivity">
 
     <EditText
@@ -16,7 +30,7 @@
         android:ems="10"
         android:id="@+id/editLiters"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="0dp"
         android:hint="Литры" />
 
     <EditText
@@ -24,12 +38,23 @@
         android:layout_height="wrap_content"
         android:id="@+id/fuelMarkEdit"
         android:layout_below="@+id/editLiters"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_alignEnd="@+id/editLiters"
         android:hint="Марка"
         android:layout_alignStart="@+id/editLiters"
         android:minLines="1"
         android:singleLine="true" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/octaSpinner"
+        android:layout_below="@+id/fuelMarkEdit"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        android:layout_alignStart="@+id/editLiters"
+        android:layout_alignEnd="@+id/editLiters">
+    </Spinner>
 
     <EditText
         android:layout_width="wrap_content"
@@ -37,9 +62,9 @@
         android:inputType="numberDecimal"
         android:ems="10"
         android:id="@+id/editPrice"
-        android:layout_below="@+id/fuelMarkEdit"
+        android:layout_below="@+id/octaSpinner"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:hint="Цена за литр" />
 
     <EditText
@@ -50,17 +75,49 @@
         android:id="@+id/editRange"
         android:layout_below="@+id/editPrice"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:hint="Пробег" />
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="5dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Степень заполненности бака"
+        android:id="@+id/textLevel"
+        android:layout_below="@+id/editRange"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center_horizontal" />
+
+    <SeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/seekBar"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/textLevel"
+        android:layout_centerHorizontal="true"
+        android:layout_alignStart="@+id/editRange"
+        android:layout_alignEnd="@+id/editRange" />
+
+     <ru.yandex.yandexmapkit.MapView
+         android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+         android:layout_marginTop="10dp"
+         android:layout_below="@+id/seekBar"
+         android:apiKey="oFLmlTN7o4WKqoqtg8WSRObLw9AfOngJJKFCVcT-Y-ekQVnPlt3aCzdxKzbV09v6IXbgUPpEGsChGrn6YuWd5jFBuxz6qtB8gR8v~DVb-fQ="/>
+
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Готово"
         android:id="@+id/fuelAddbutton"
-        android:layout_below="@+id/editRange"
+        android:layout_below="@+id/map"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:onClick="saveRefill"/>
 
 </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
