--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,9 +3,10 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_refill"
             android:icon="@drawable/ic_local_gas_station_black_48dp"
             android:title="Заправки" />
+        <!--
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
@@ -32,5 +33,8 @@
                 android:title="Send" />
         </menu>
     </item>
+
+    -->
+    </group>
 
 </menu>
