--- a/app/src/main/res/layout/activity_new_car.xml
+++ b/app/src/main/res/layout/activity_new_car.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/newCar"
+                android:src="@drawable/new_car"
                 app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
