--- a/app/src/main/res/layout/activity_add_fuel.xml
+++ b/app/src/main/res/layout/activity_add_fuel.xml
@@ -48,7 +48,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="5dp"
     android:layout_marginTop="0dp"
-    tools:context=".AddFuelActivity">
+    tools:context=".addFuelActivity">
 
     <EditText
         android:layout_width="wrap_content"
@@ -149,7 +149,7 @@
         android:id="@+id/fuelAddbutton"
         android:layout_below="@+id/map"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:onClick="saveRefill"/>
 
 </RelativeLayout>
