--- a/app/src/main/res/layout/activity_new_car.xml
+++ b/app/src/main/res/layout/activity_new_car.xml
@@ -48,7 +48,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="5dp"
         android:layout_marginTop="0dp"
-        tools:context=".AddFuelActivity">
+        tools:context=".addFuelActivity">
 
         <EditText
             android:layout_width="wrap_content"
@@ -82,10 +82,33 @@
             android:layout_marginTop="30dp"
             android:hint="Текущий пробег" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="5dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Степень заполненности бака"
+            android:id="@+id/textLevel"
+            android:layout_below="@+id/editDefaultRange"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:gravity="center_horizontal" />
+
+        <SeekBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar"
+            android:layout_marginTop="5dp"
+            android:layout_below="@+id/textLevel"
+            android:layout_centerHorizontal="true"
+            android:layout_alignStart="@+id/editDefaultRange"
+            android:layout_alignEnd="@+id/editDefaultRange" />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/editDefaultRange"
+            android:layout_below="@+id/seekBar"
             android:layout_marginTop="30dp"
             android:text="Создать"
             android:onClick="createCar"/>
